--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "skipLibCheck": true,
     "outDir": "dist",
-    "lib": ["es2015", "dom", "dom.iterable"],
+    "lib": ["es2015"],
     "types": ["mocha", "node"],
     "target": "es2020",
     "module": "esnext",
@@ -12,6 +13,6 @@
     "downlevelIteration": true,
     "allowJs": true
   },
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "test/data"],
   "include": ["src", "test"]
 }
