--- a/package.json
+++ b/package.json
@@ -29,20 +29,18 @@
       "require": "./dist/cjs/index.cjs",
       "types": "./dist/types/index.d.ts"
     },
-    "./*": "./*"
+    "./umd.js": "./dist/umd/index-of-newline.cjs",
+    "./umd.min.js": "./dist/umd/index-of-newline.cjs"
   },
   "main": "dist/cjs/index.cjs",
-  "unpkg": "dist/umd/index-of-newline.cjs",
   "module": "dist/esm/index.mjs",
+  "browser": "dist/umd/index-of-newline.cjs",
   "types": "dist/types/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "build": "tsds build",
-    "clean": "node -e \"const dir = require('path').join(require('homedir-polyfill')(), '.im'); try {require('fs').rmdirSync(dir, {recursive: true})} catch(err) {}\"",
-    "deploy": "tsds deploy",
-    "docs": "tsds docs",
     "format": "biome check --write --unsafe src/ test/",
     "test": "tsds test:node --no-timeouts",
     "test:engines": "nvu engines tsds test:node --no-timeouts",
