--- a/package.json
+++ b/package.json
@@ -57,10 +57,6 @@
     "node": ">=0.8"
   },
   "tsds": {
-    "source": "src/index.ts",
-    "targets": [
-      "cjs",
-      "esm"
-    ]
+    "source": "src/index.ts"
   }
 }
