--- a/package.json
+++ b/package.json
@@ -26,16 +26,12 @@
   "exports": {
     ".": {
       "import": "./dist/esm/index.mjs",
-      "require": "./dist/cjs/index.cjs",
-      "types": "./dist/types/index.d.ts"
+      "require": "./dist/cjs/index.cjs"
     },
-    "./umd.js": "./dist/umd/index-of-newline.cjs",
-    "./umd.min.js": "./dist/umd/index-of-newline.cjs"
+    "./package.json": "./package.json"
   },
   "main": "dist/cjs/index.cjs",
-  "module": "dist/esm/index.mjs",
-  "browser": "dist/umd/index-of-newline.cjs",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/cjs/index.d.cts",
   "files": [
     "dist"
   ],
