--- a/.depcheckrc
+++ b/.depcheckrc
@@ -1,1 +1,1 @@
-ignores: ["node-version-use", "ts-dev-stack", "@biomejs/biome", "resolve-bin-sync"]
+ignores: ["node-version-use", "ts-dev-stack", "resolve-bin-sync"]
